# camera-server

./: Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: build-push.yaml  main_webcam-server.yml  validate.yaml
app/: clients.py  stream.py
app/api/v1/: __init__.py  clients.py  ws.py
app/core/: config.py
app/schemas/: __init__.py  camera.py  client.py
