[tool.poetry]
name = "camera-server"
version = "0.1.0"
description = "Awesome camera-server created by rmenai"
authors = ["rmenai"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
fastapi = "^0.68.2"
pydantic = "^1.8.2"
requests = "^2.26.0"
taskipy = "^1.8.1"
uvicorn = "^0.15.0"
vidgear = "^0.2.4"
websockets = "^10.1"
opencv-python = "^4.5.4"

[tool.poetry.dev-dependencies]
colorlog = "^6.5.0"
coverage = "^6.1.1"
flake8 = "^3.9.2"
flake8-annotations = "^2.6.2"
flake8-bugbear = "^21.4.3"
flake8-docstrings = "^1.6.0"
flake8-import-order = "^0.18.1"
flake8-string-format = "^0.3.0"
flake8-tidy-imports = "^4.4.1"
flake8-todo = "^0.7"
pep8-naming = "^0.12.1"
pre-commit = "^2.14.1"
pytest = "^6.2.5"
python-dotenv = "^0.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
start = "python -m app"
test = "coverage run -m pytest tests/"
report = "coverage report"
lint = "pre-commit run --all-files"
precommit = "pre-commit install"
